<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
		http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.goobi.viewer</groupId>
	<artifactId>viewer-connector</artifactId>
	<version>25.07-SNAPSHOT</version>
	<packaging>jar</packaging>


	<name>Goobi viewer - Connector</name>
	<url>https://github.com/intranda/goobi-viewer-connector</url>

	<scm>
		<url>scm:git:https://github.com/intranda/goobi-viewer-connector/</url>
		<connection>scm:git:https://github.com/intranda/goobi-viewer-connector/</connection>
	</scm>


	<repositories>
		<repository>
			<id>intranda-public</id>
			<url>https://nexus.intranda.com/repository/maven-public</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>intranda-releases</id>
			<url>https://nexus.intranda.com/repository/maven-releases</url>
		</repository>
		<snapshotRepository>
			<id>intranda-snapshots</id>
			<url>https://nexus.intranda.com/repository/maven-snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<skipTests>true</skipTests>
		<skipDependencyCheck>true</skipDependencyCheck>
		<failOnSnapshot>false</failOnSnapshot>
		<maven.compiler.release>21</maven.compiler.release>

		<!-- Sonar -->
		<sonar.projectKey>intranda_goobi-viewer-connector</sonar.projectKey>
		<sonar.organization>intranda</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.java.source>21</sonar.java.source>
		<sonar.java.target>21</sonar.java.target>

		<!-- Checkstyle -->
		<checkstyle.max.violations>0</checkstyle.max.violations>
		<skipCheckstyle>true</skipCheckstyle>

		<!-- Manifest information -->
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<buildDate>${maven.build.timestamp}</buildDate>

		<viewer-core.version>25.07-SNAPSHOT</viewer-core.version>

		<commons-configuration2.version>2.12.0</commons-configuration2.version>
		<commons-io.version>2.20.0</commons-io.version>
		<commons-jxpath.version>1.4.0</commons-jxpath.version>
		<commons-lang3.version>3.18.0</commons-lang3.version>
		<httpclient.version>4.5.14</httpclient.version>
		<httpcore.version>4.4.16</httpcore.version>
		<jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
		<jdom2.version>2.0.6.1</jdom2.version>
		<json.version>20250517</json.version>
		<junit.version>5.13.4</junit.version>
		<log4j.version>2.25.1</log4j.version>
		<solr.version>9.9.0</solr.version>
		<xstream.version>1.4.21</xstream.version>
	</properties>


    <dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>io.goobi.viewer</groupId>
			<artifactId>viewer-core</artifactId>
			<version>${viewer-core.version}</version>
			<exclusions>
				<!-- Excluding weld-servlet-shaded is necessary because otherwise it will false positively show as used but undeclared dependency
					 instead of jakarta.servlet -->
				<exclusion>
					<groupId>org.jboss.weld.servlet</groupId>
					<artifactId>weld-servlet-shaded</artifactId>
				</exclusion>
			</exclusions>

		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>${commons-configuration2.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-jxpath</groupId>
			<artifactId>commons-jxpath</artifactId>
			<version>${commons-jxpath.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${httpclient.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>${httpcore.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>${jakarta.servlet-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom2</artifactId>
			<version>${jdom2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${json.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.solr</groupId>
			<artifactId>solr-solrj</artifactId>
			<version>${solr.version}</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>${xstream.version}</version>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<!-- used for mvn versions:display-plugin-updates -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.8.8</version>
								</requireMavenVersion>
								<requireReleaseDeps>
									<message>No Snapshots Allowed!</message>
								</requireReleaseDeps>
							</rules>
							<fail>${failOnSnapshot}</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- used for mvn verify -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.8.1</version>
				<executions>
					<execution>
						<id>analyze</id>
						<goals>
							<goal>analyze-only</goal>
						</goals>
						<configuration>
							<failOnWarning>true</failOnWarning>
							<ignoredUnusedDeclaredDependencies>
								<!-- JXPath is used at XPathExpressionEngine from org.apache.commons.configuration2, i.e. LanguageHelper -->
								<ignoredUnusedDeclaredDependency>commons-jxpath:commons-jxpath</ignoredUnusedDeclaredDependency>

								<!-- junit-jupiter is used to run the tests, otherwise it will fail in maven -->
								<ignoredUnusedDeclaredDependency>org.junit.jupiter:junit-jupiter</ignoredUnusedDeclaredDependency>
							</ignoredUnusedDeclaredDependencies>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<compilerArgs>
						<!-- Explicitly enable annotation processing -->
						<arg>-proc:full</arg>
						<arg>-Xlint:deprecation</arg>
						<arg>-Xlint:unchecked</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.3</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
					<excludes>
						<exclude>**/Abstract*.java</exclude>
					</excludes>
					<systemPropertyVariables>
						<java.util.logging.config.file>src/test/resources/log4j2.test.xml</java.util.logging.config.file>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
						<manifestEntries>
							<ApplicationName>Goobi viewer Connector</ApplicationName>
							<version>${project.version}</version>
							<Implementation-Version>${buildNumber}</Implementation-Version>
							<Implementation-Build-Date>${buildDate}</Implementation-Build-Date>
						</manifestEntries>
					</archive>
					<excludes>
						<exclude>**/log4j2.xml</exclude>
						<exclude>**/*.properties</exclude>
					</excludes>

				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- get git version number -->
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.9.10</version>
				<configuration>
					<commitIdGenerationMode>flat</commitIdGenerationMode>
					<gitDescribe>
						<skip>true</skip>
					</gitDescribe>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<shortRevisionLength>7</shortRevisionLength>
					<doCheck>false</doCheck>
				</configuration>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.2</version>
				<configuration>
					<doclint>none</doclint>
					<failOnWarnings>true</failOnWarnings>
					<!-- Specifies the tags to be fixed automatically when running the mvn javadox:fix command, see:
						 https://maven.apache.org/plugins/maven-javadoc-plugin/fix-mojo.html#fixTags
					-->
					<fixTags>link,throws,return,param</fixTags>
					<tags>
						<tag>
							<!-- Disables custom @should tag in Javadoc see:
								 https://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html#tags
							-->
							<name>should</name>
							<placement>X</placement>
						</tag>
					</tags>
				</configuration>
				<executions>
					<execution>
						<id>check-javadoc</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				 </executions>
			</plugin>
			<!-- used for test coverage report in Jenkins -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.13</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- used for mvn versions:display-dependency-updates -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.18.0</version>
				<configuration>
					<rulesUri>file://${basedir}/version-number-rules.xml</rulesUri>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>12.1.3</version>
				<configuration>
					<!--failBuildOnCVSS>5.0</failBuildOnCVSS-->
					<skipProvidedScope>true</skipProvidedScope>
					<assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
					<knownExploitedEnabled>false</knownExploitedEnabled>
					<format>ALL</format>
					<skipTestScope>true</skipTestScope>
					<skip>${skipDependencyCheck}</skip>
					<suppressionFiles>
						<suppressionFile>file://${basedir}/dependency-suppression.xml</suppressionFile>
					</suppressionFiles>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.6.0</version>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>11.0.1</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>checkstyle-check</id>
						<phase>verify</phase>
						<configuration>
							<skip>${skipCheckstyle}</skip>
							<failOnViolation>true</failOnViolation>
							<failsOnError>false</failsOnError>
							<logViolationsToConsole>true</logViolationsToConsole>
							<maxAllowedViolations>${checkstyle.max.violations}</maxAllowedViolations>
							<violationSeverity>warning</violationSeverity>
							<configLocation>checkstyle.xml</configLocation>
						</configuration>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<doclint>none</doclint>
					<failOnWarnings>true</failOnWarnings>
					<fixTags>link,throws,return,param</fixTags>
					<tags>
						<tag>
							<name>should</name>
							<placement>X</placement>
						</tag>
					</tags>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
</project>
